# memo_1

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/templates/: callback.html  index.html  login.html  register.html
app/views/: api.py  main.py  memo.py  user.py
static/css/: login.css
templates/: index.html  login.html  register.html
tests/: conftest.py
tests/views/: test_api.py  test_main.py  test_memo.py
